--- a/Cryptobase web/cryptobase-web/src/App.css
+++ b/Cryptobase web/cryptobase-web/src/App.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
 }
+body{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 .App {
   text-align: center;
 }
@@ -60,8 +63,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 50vw;
-  height: 80vh; /* Adjust height as needed */
+  width: 30vw;
+  height: 85vh; /* Adjust height as needed */
   background-color: black;
   border: 0.8px solid white;
   color:white;
@@ -89,3 +92,42 @@
   padding-left: 20px;
   color: white;
 }
+.emailtext{
+  padding-top: 20px;
+  padding-left: 20px;
+  color: white;
+}
+.passwordtext{
+  padding-top: 70px;
+  padding-left: 20px;
+  color: white;
+}
+.textfields{
+  padding-top: 20px;
+  padding-left: 20px;
+  color: white;
+}
+.emailfield{
+  position: absolute;
+  height: 50px;
+  border-radius: 10px;
+  padding-left: 10px;
+  width: 80%;
+  font-weight: 600;
+}
+.siginbutton {
+  position: relative;
+  top: 70px;
+  left: 40%;
+  height: 50px;
+  width: 100px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;  /* Center horizontally */
+  align-items: center;      /* Center vertically */
+  background-color: orange;
+  color: black;
+  font-weight: 600;
+  text-align: center;       /* Center text in case of multiline text */
+}
+
