--- a/Cryptobase web/cryptobase-web/src/App.css
+++ b/Cryptobase web/cryptobase-web/src/App.css
@@ -128,6 +128,7 @@ body{
   background-color: orange;
   color: black;
   font-weight: 600;
-  text-align: center;       /* Center text in case of multiline text */
+  text-align: center; 
+  text-decoration: none;      /* Center text in case of multiline text */
 }
 
