--- a/Cryptobase web/cryptobase-web/src/App.css
+++ b/Cryptobase web/cryptobase-web/src/App.css
@@ -138,6 +138,23 @@ body{
   width: 20%;
   border: 0.8px solid black;
 }
+.pages{
+  display: flex;
+  flex-direction: row;
+  /* background-color: blue; */
+  /* width: 90%; */
+}
+.detailspage{
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  margin-left: 20%;
+  /* background-color: red; */
+  width: 75%;
+  margin-left:0%;
+  /* border: 0.8px solid black; */
+  overflow-y: scroll;
+}
 .firstoption {
   height: 40px; /* Height of the option */
   font-weight: 200;
@@ -182,4 +199,35 @@ body{
 }
 .linktexts{
   text-decoration: none;
+}
+.dashboardpage{
+  display: flex;
+  /* background-color: green; */
+  flex-direction: column;
+  width: 25%;
+  border: 0.8px solid black;
+}
+.tables {
+  position: relative;
+  top: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-left: 50px;
+  margin-right: 50px;
+  width: 100%;
+  height: 80px;
+  background-color: orangered;
+}
+.ListDetails{
+  list-style: none;
+  color: white;
+  padding-top: 30px;
+  padding-left: 70px;
+}
+.ListDetails2{
+  list-style: none;
+  color: white;
+  padding-top: 30px;
+  padding-left: 70px;
 }
