--- a/Cryptobase web/cryptobase-web/src/App.css
+++ b/Cryptobase web/cryptobase-web/src/App.css
@@ -164,7 +164,7 @@ body{
   font-size: 20px;
   margin-top: 50px;
   margin-bottom: 30px; /* Space below the first option */
-  background-color: orangered;
+  /* background-color: orangered; */
   color: black;
   text-decoration: none;
   display: flex;
@@ -175,7 +175,10 @@ body{
   padding-left: 20px;
   padding-right: 20px;
 }
-
+.firstoption:hover{
+  background-color: orangered;
+  color: white;
+}
 .sidebarimage {
   height: 25px;
   width: auto; /* Maintain aspect ratio */
