--- a/crypto-webpage/src/App.css
+++ b/crypto-webpage/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
 }
-
+body{
+  background-color: #101723;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +37,55 @@
   to {
     transform: rotate(360deg);
   }
+}
+.bodyimage {
+  width: 100%;
+  height: 100%;
+  /* display: block; */
+}
+.webbody{
+  background-color: #101723;
+}
+.firstpartcontents {
+  position: absolute;
+  color: white; /* Text color */
+  font-size: 24px; /* Adjust font size as needed */
+  text-align: center; /* Center the text */
+  padding: 20px; /* Optional: padding around the text */
+  top: 180px;
+  font-weight: 700;
+  font-size: 72px;
+  left: 150px;
+  display: flex;
+  flex-direction: row;
+  text-align: start;
+  color:#d9e1eb;
+}
+.subtext{
+  position: relative;
+  top: 50px;
+  font-size: 32px;
+  font-weight: 500;
+}
+.firstpart{
+  width: 100%;
+  height: 100%;
+  background-color: #101723;
+  /* z-index: 999; */
+  color: white;
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+}
+.heroimage{
+  height: 469px;
+  padding-left: 5px;
+}
+.texts{
+  display: flex;
+  flex-direction: row;
+  /* gap: 50%; */
+}
+.headers{
+  width: 900px;
 }
