--- a/crypto-webpage/src/App.css
+++ b/crypto-webpage/src/App.css
@@ -17,7 +17,10 @@ body {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+html{
+  height: 100%;
+  width: 100%;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -213,7 +216,7 @@ body {
     position: relative;
     top: 200px;
     /* left: 8vw; */
-    justify-content: center;
+    justify-content: start;
   }
   .subtext {
     position: relative;
@@ -248,6 +251,17 @@ body {
   .signupbtn, .playstorebtn{
     width: 100vw;
   }
+  .secondpart{
+    position: relative;
+    top:1350px;
+    display: flex;
+    /* flex-direction: row; */
+    justify-content: center;
+    align-items: center;
+    /* width: 500vw; */
+    left: 80%;
+    /* background-color: red; */
+  }
 }
 @media screen and (max-width:740px) {
   .texts {
@@ -256,6 +270,8 @@ body {
     justify-content: center;
     text-align: center;
     align-items: center;
+    align-self: center;
+    /* background-color: red; */
   }
 
 }
