--- a/crypto-webpage/src/App.css
+++ b/crypto-webpage/src/App.css
@@ -110,7 +110,17 @@ html {
   font-size: 32px;
   font-weight: 500;
 }
-
+.subtextfeaturechanging{
+  position: relative;
+  top: 20px;
+  gap: 40px;
+  color: grey;
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  font-weight: 400;
+  text-decoration: none;
+}
 .firstpart {
   width: 100%;
   height: 100%;
@@ -126,7 +136,9 @@ html {
   height: 469px;
   padding-left: 5px;
 }
-
+.featureimagechanging{
+  height: 500px;
+}
 .heroimagemobo {
   position: relative;
   top: 50px;
