--- a/crypto-webpage/src/App.css
+++ b/crypto-webpage/src/App.css
@@ -243,6 +243,30 @@ html {
   flex-wrap: wrap;
   /* background-color: red; */
 }
+.gfgfdfg{
+  position: relative;
+  display: grid;
+  /* flex-direction: column; */
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 50px;
+  top: 50px;
+  padding: 50px;
+  color: white;
+  font-weight: bold;
+  font-size: 25px;
+  width: 100%;
+  /* height: 50px; */
+  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
+}
+.dksldsl{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
+}
 .firstfeature{
   display: flex;
   flex-direction: column;
@@ -336,6 +360,11 @@ html {
     left: 80%;
     /* background-color: red; */
   }
+  .thirdsectext{
+    position: absolute;
+    display: none;
+    top: 20000px;
+  }
 }
 
 @media screen and (max-width:740px) {
@@ -427,4 +456,15 @@ html {
 .dcdjksj{
   color: black;
   font-weight: 600;
+}
+.thirdsectext{
+  position: relative;
+  top: 80px;
+  justify-content: center;
+  text-align: center;
+  font-weight: 500;
+  font-size: 25px;
+  color: white;
+  width: 100%;
+  height: fit-content;
 }
