--- a/crypto-webpage/src/App.css
+++ b/crypto-webpage/src/App.css
@@ -595,7 +595,34 @@ html {
   justify-content: center;
   display: flex;
   align-items: center;
+  flex-direction: column;
 }
 .idsksld:hover{
   background-color: #101723;
+}
+.sdssww{
+  width: 100%;
+  height: 500px;
+  /* background-color: blue; */
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
+  font-weight: 500;
+  font-size: 36px;
+  /* padding-top: 20px; */
+}
+.sshgsbcjs{
+  height: 500px;
+  width: 100%;
+}
+.wjdsjcldkmc{
+  font-size: 15px;
+  position: relative;
+  width:"100%";
+  padding-top: 20px;
+}
+.jkhjkshk{
+  width: 80%;
+  padding-top: 50px;
 }
