--- a/crypto-webpage/src/App.css
+++ b/crypto-webpage/src/App.css
@@ -626,3 +626,45 @@ html {
   width: 80%;
   padding-top: 50px;
 }
+.ewkfwj{
+  width: 100%;
+  height: 500px;
+  /* background-color: red; */
+  position: relative;
+  top: 200px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* padding-left:30px; */
+  color: grey;
+  /* padding-right: 200px; */
+}
+@media screen and (max-width:740px) {
+  .ewkfwj{
+    gap: 80px;
+    top: 50px;
+    padding-left: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media screen and (min-width:2000px) {
+  .ewkfwj{
+    top: 700px;
+  }
+}
+.oijff{
+  width: 500px;
+}
+.wowkdoko {
+  width: 500px;
+  height: 450px;
+  /* background-color: red; */
+  border: 2px solid white; /* Corrected syntax */
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
