--- a/crypto-webpage/src/App.css
+++ b/crypto-webpage/src/App.css
@@ -907,6 +907,10 @@ html {
   padding-right: 20px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 500;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 .currencyprice{
   position: relative;
