--- a/crypto-webpage/src/App.css
+++ b/crypto-webpage/src/App.css
@@ -1003,3 +1003,14 @@ html {
     width: 105%;
   }
 }
+.dnfndfnn{
+  position: relative;
+  padding: 20px;
+  top: 20px;
+}
+.jfnef0smdkmkf{
+  width: 100%;
+  height: 100px;
+  /* background-color: red; */
+  border-radius: 10px;
+}
