--- a/crypto-webpage/src/App.css
+++ b/crypto-webpage/src/App.css
@@ -1071,3 +1071,76 @@ html {
 .showaddress:hover{
   background-color: rgb(88, 88, 200);
 }
+.iuhkhjjv{
+  display: flex;
+  position: relative;
+  top: 20px;
+  /* background-color: red; */
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+}
+.creditcard{
+  height: 150px;
+  width: 350px;
+  background-color: #282c34;
+  border-radius: 10px;
+  justify-content: start;
+  text-align: start;
+  align-items: start;
+}
+.portfoliodetails{
+  position: relative;
+  top: 50px;
+  border-radius: 10px;
+  width: 90%;
+  height: 90vh;
+  background-color: #282c34;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.ejjhjknjm{
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+  gap: 50px;
+  padding-left: 50px;
+  padding-top: 20px;
+  font-size: 15px;
+  padding-right: 60px;
+  color: white;
+  font-weight: 600;
+  font-size: 15px;
+  /* left: 50px; */
+}
+.portfoliocurrency{
+  position: relative;
+  top: 20px;
+  left: 20px;
+  font-size: 17px;
+  font-weight: 500;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+.portfoliovalue{
+  position: relative;
+  top: 20px;
+  right: 20px;
+  font-size: 20px;
+  padding-top: 10px;
+  font-weight: 500;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: white;
+  justify-content: center;
+  align-items: center;
+}
